fix navbar visible on mobile when page loads

--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -48,6 +48,11 @@
         display: block;
     }
 
+    .navbar .guest,
+    .navbar .user {
+        display: none;
+  }
+
     /* Allow navbar to wrap elements on mobile */
     .navbar {
         flex-wrap: wrap;
